--- a/leanpkg.toml
+++ b/leanpkg.toml
@@ -5,4 +5,4 @@ lean_version = "3.4.2"
 path = "src"
 
 [dependencies]
-mathlib = {git = "https://github.com/leanprover/mathlib", rev = "50a03f76bb89ee5cf9d9703f78e1eb2139d9b609"}
+mathlib = {git = "https://github.com/leanprover-community/mathlib", rev = "253fe33b78f4a2c893499f8d5ea0ff62d23e5cc3"}
