--- a/leanpkg.toml
+++ b/leanpkg.toml
@@ -1,8 +1,8 @@
 [package]
 name = "ModalTab"
 version = "0.1"
-lean_version = "3.4.2"
+lean_version = "leanprover-community/lean:3.16.2"
 path = "src"
 
 [dependencies]
-mathlib = {git = "https://github.com/leanprover-community/mathlib", rev = "e1c035dae399a97a79f0f0c8a05ffc3d23860e22"}
+mathlib = {git = "https://github.com/leanprover-community/mathlib", rev = "938b73a4cc852b643a31334cf89df4f29ac0784a"}
